# kexengine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.claude/skills/ffi-debug/: SKILL.md
.claude/skills/test-parity/: SKILL.md
src/: lib.rs
src/ffi/: mod.rs
src/graph/: mod.rs  port_spec.rs  traversal.rs
src/nodes/: anchor.rs  bridge.rs  copy_path.rs  curved.rs  force.rs  forces.rs  geometric.rs  mod.rs  reverse.rs  reverse_path.rs  schema.rs
src/persistence/: chunk.rs  document.rs  format.rs  graph_codec.rs  mod.rs
src/sim/: curvature.rs  forces.rs  frame.rs  frame_change.rs  keyframe.rs  math.rs  mod.rs  physics.rs  physics_params.rs  point.rs
src/track/: dispatch.rs  document.rs  evaluate.rs  mod.rs  result.rs  section.rs  spline.rs
test-data/: all_types_kexd.kex  circuit_kexd.kex  shuttle_kexd.kex  switch.json  switch_kexd.kex
